Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-14854

LBUG mdd_swap_layouts()) lfs-MDD0007: unable to roll back layout swap

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.15.0
    • Lustre 2.15.0
    • None
    • 3
    • 9223372036854775807

      [3131580.998178] LustreError: 997:0:(mdd_object.c:2597:mdd_swap_layouts())  unable to roll back layout swap. FIDs: [0x340017011:0xddde:0x0] and [0x340017774:0x1cc70:0x0]error: -61/-61, steps: 1
      [3131581.003860] LustreError: 997:0:(mdd_object.c:2602:mdd_swap_layouts()) LBUG
      [3131581.006922] Kernel panic - not syncing: LBUG
      [3131581.009200] CPU: 15 PID: 997 Comm: mdt03_018 Kdump: loaded Tainted: G           OE  ------------ T 3.10.0-1160.21.1.el7_lustre.ddn13.x86_64 #1
      [3131581.016927] Call Trace:
      [3131581.018405]  [<ffffffff8858305a>] dump_stack+0x19/0x1b
      [3131581.020275]  [<ffffffff8857c5b2>] panic+0xe8/0x21f
      [3131581.021956]  [<ffffffffc08f68cb>] lbug_with_loc+0x9b/0xa0 [libcfs]
      [3131581.023682]  [<ffffffffc159cd63>] mdd_swap_layouts+0x1b53/0x1d40 [mdd]
      [3131581.025373]  [<ffffffffc13fd07b>] mdt_swap_layouts+0x37b/0x9e0 [mdt]
      [3131581.027178]  [<ffffffffc0dc8bee>] tgt_request_handle+0xaee/0x15f0 [ptlrpc]
      [3131581.028963]  [<ffffffffc0da4371>] ? ptlrpc_nrs_req_get_nolock0+0xd1/0x170 [ptlrpc]
      [3131581.030715]  [<ffffffffc08f6bde>] ? ktime_get_real_seconds+0xe/0x10 [libcfs]
      [3131581.032399]  [<ffffffffc0d6f5db>] ptlrpc_server_handle_request+0x24b/0xab0 [ptlrpc]
      [3131581.034170]  [<ffffffffc0d6c255>] ? ptlrpc_wait_event+0xa5/0x360 [ptlrpc]
      [3131581.035814]  [<ffffffff87ed32c3>] ? __wake_up+0x13/0x20
      [3131581.037332]  [<ffffffffc0d72f44>] ptlrpc_main+0xb34/0x1470 [ptlrpc]
      [3131581.038904]  [<ffffffff87ed4c1e>] ? finish_task_switch+0x4e/0x1c0
      [3131581.040412]  [<ffffffff8858899f>] ? __schedule+0x3af/0x860
      [3131581.041880]  [<ffffffffc0d72410>] ? ptlrpc_register_service+0xf80/0xf80 [ptlrpc]
      [3131581.043558]  [<ffffffff87ec5da1>] kthread+0xd1/0xe0
      [3131581.044942]  [<ffffffff87ec5cd0>] ? insert_kthread_work+0x40/0x40
      [3131581.046491]  [<ffffffff88595ddd>] ret_from_fork_nospec_begin+0x7/0x21
      [3131581.048032]  [<ffffffff87ec5cd0>] ? insert_kthread_work+0x40/0x40 

            bobijam Zhenyu Xu
            bobijam Zhenyu Xu
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: